// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoGrid renders with title prop 1`] = `
<Fragment>
  <div
    className="video-section"
  >
    <VideoGridHeader
      title="Trending"
    />
    <div
      className="video-grid"
    >
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
    </div>
    <Divider />
  </div>
</Fragment>
`;

exports[`VideoGrid renders without divider 1`] = `
<Fragment>
  <div
    className="video-section"
  >
    <VideoGridHeader
      title="Trending"
    />
    <div
      className="video-grid"
    >
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
    </div>
  </div>
</Fragment>
`;

exports[`VideoGrid renders without props 1`] = `
<Fragment>
  <div
    className="video-section"
  >
    <VideoGridHeader
      title="Trending"
    />
    <div
      className="video-grid"
    >
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
      <VideoPreview />
    </div>
    <Divider />
  </div>
</Fragment>
`;
